[package]
name = "railroute"
version = "0.1.0"
authors = ["Aspect"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
simplelog = "*"
clap = "2.33.3"
lazy_static = "1.4.0"
tokio = { version = "1.0.0", features = ["full" ] }
tokio-util = { version = "0.6.1", features = ["full"] }
tokio-stream = { version = "0.1" }
